--- a/css/main.css
+++ b/css/main.css
@@ -7,14 +7,20 @@ body{
 	margin:80px auto;
 }
 
+table {
+    border-collapse: collapse;
+}
+
 td {
-	font-size:20px;
+	font-size:16px;
 	width:120px;
 	height:40px;
 	text-align:center;
 	color:black;
 	cursor:pointer;
 	background-color:white;
+	margin: 5px;
+	border: 2px solid #999;
 }
 
 td:hover{
@@ -22,7 +28,7 @@ td:hover{
 }
 
 input.txtField{
-	width:90px;
+    width: 90%;
 	height:30px;
 }
 
